--- a/.air.toml
+++ b/.air.toml
@@ -21,7 +21,7 @@ args_bin = ["hello", "world"]
 # Watch these filename extensions.
 include_ext = ["go", "tpl", "tmpl", "html"]
 # Ignore these filename extensions or directories.
-exclude_dir = ["assets", "tmp", "vendor", "frontend/node_modules"]
+exclude_dir = ["assets", "tmp", "vendor", "frontend/node_modules", "minio-data", "aws"]
 # Watch these directories if you specified.
 include_dir = []
 # Watch these files.
