--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,21 @@ services:
     # mem_limit: 2048m
     # cpus: 0.25
 
+  minio:
+    container_name: halosus-minio
+    image: quay.io/minio/minio
+    environment:
+      - MINIO_ROOT_USER=halosus
+      - MINIO_ROOT_PASSWORD=password
+    ports:
+      - 9000:9000
+      - 9001:9001
+    volumes:
+      - ./minio-data:/data
+    networks:
+      - eniqilo
+    command: server /data --console-address ":9001"
+
 networks:
   eniqilo:
     external: true
