--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,24 +29,30 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      # - name: Automatic tagging of releases
-      #   id: increment-git-tag
-      #   # check https://semver.org/
-      #   # version format: v.{major}.{minor}.{patch}
-      #   # try -v patch|major|minor
-      #   run: |
-      #     bash ./git_update.sh -v patch
+      - name: Automatic tagging of releases
+        id: increment-git-tag
+        # check https://semver.org/
+        # version format: v.{major}.{minor}.{patch}
+        # try -v patch|major|minor
+        run: |
+          bash ./git_update.sh -v patch
 
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: latest
+          IMAGE_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
         run: |
           # Build a docker container and
           # push it to ECR so that it can
           # be deployed to ECS.
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY --all-tags
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+      # - name: Retag ${{ env.ECR_REPOSITORY }}:${{ steps.increment-git-tag.outputs.git-tag }} as ${{ env.ECR_REPOSITORY }}:latest
+      #   uses: abronin/ecr-retag-action@v1
+      #   with:
+      #     repository: ${{ env.ECR_REPOSITORY }}
+      #     tag: ${{ steps.increment-git-tag.outputs.git-tag }}
+      #     new-tags: latest
